# QtOpenGL

./: BuildGen.bat  CMakeLists.txt  cpdll.bat
CMake/: vs_config.cmake
src/: main.cpp
src/Platform/: OpenGLContextApi.cpp  OpenGLContextApi.h  WindowsOpenGLContextApi.cpp  WindowsOpenGLContextApi.h
src/Widget/: OpenGLWidget.cpp  OpenGLWidget.h
